Bug: builder elements at the bottom of the list have their text cut off by the edge of the window

--- a/src/SquidStat/SquidStat/GUI.css
+++ b/src/SquidStat/SquidStat/GUI.css
@@ -357,6 +357,8 @@ QLabel[experiment-params-widget="low-margin"] {
 #elements-list-holder {
 	border: none;
 	background-color: #f8f9fb;
+	
+	margin-bottom: 30px;
 }
 #node-list-scroll-area {
 	border: none;
